log
Thu 09 May 2024 03:07:40 PM UTC: 
 tests:  1|8
total_score: 0/70
d456311
Thu 09 May 2024 03:15:31 PM UTC: 
 treemap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
2f9079b
Thu 09 May 2024 03:26:26 PM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++---
 1 file changed, 37 insertions(+), 3 deletions(-)
In file included from test.c:4:
test.c: In function ‘insertTreeMap’:
treemap.c:49:10: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   49 |   newNode->pair->key = key;
      |   ~~~~~~~^~~~~~
treemap.c:50:10: error: ‘*newNode.pair’ is used uninitialized [-Werror=uninitialized]
   50 |   newNode->pair->value = value;
      |   ~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecb3bac
Thu 09 May 2024 03:27:38 PM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  3|8
total_score: 0/70
d195fc4
Thu 09 May 2024 03:28:48 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|7
total_score: 5/70
5cc1a68
Thu 09 May 2024 03:38:17 PM UTC: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
857769d
Thu 09 May 2024 03:42:40 PM UTC: 
 treemap.c | 26 ++++----------------------
 1 file changed, 4 insertions(+), 22 deletions(-)
In file included from test.c:4:
treemap.c:79:2: error: expected identifier or ‘(’ before ‘/’ token
   79 | */
      |  ^
test.c: In function ‘minimum_test’:
test.c:225:19: error: implicit declaration of function ‘minimum’ [-Werror=implicit-function-declaration]
  225 |     TreeNode* n = minimum(tree->root);
      |                   ^~~~~~~
test.c:225:19: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:239:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  239 |     n = minimum(tree->root->left);
      |       ^
test.c:250:7: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
  250 |     n = minimum(tree->root);
      |       ^
cc1: all warnings being treated as errors
Compilation failed
cb14858
Thu 09 May 2024 03:42:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
d0422de
Thu 09 May 2024 03:43:10 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
d22bf23
Thu 09 May 2024 03:45:01 PM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
840bfcf
Thu 09 May 2024 03:45:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
f3536ac
Thu 09 May 2024 03:46:18 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
897af5d
Thu 09 May 2024 03:47:49 PM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
57ea0f3
Thu 09 May 2024 03:49:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
60b2eb3
Thu 09 May 2024 03:49:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|6
total_score: 5/70
1aca29b
Thu 09 May 2024 03:51:18 PM UTC: 
 treemap.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
 tests:  6|6
total_score: 5/70
6e9e3b1
Thu 09 May 2024 03:52:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
70496ae
Thu 09 May 2024 04:03:09 PM UTC: 
 treemap.c | 31 +++++++++----------------------
 1 file changed, 9 insertions(+), 22 deletions(-)
 tests:  6|6
total_score: 5/70
06a9007
Thu 09 May 2024 04:05:09 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|6
total_score: 5/70
0b6169b
Thu 09 May 2024 04:08:58 PM UTC: 
 treemap.c | 26 +++++++++++++++-----------
 1 file changed, 15 insertions(+), 11 deletions(-)
 tests:  8|5
total_score: 15/70
6f09280
